added folders navigation for global search results

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -37,7 +37,8 @@
     "navigate": "to navigate",
     "select": "to select",
     "close": "to close",
-    "hint": "Start typing to search templates and folders"
+    "hint": "Start typing to search templates and folders",
+    "goToFolder": "Go to folder"
   },
   "login": {
     "title": "Rexfill",
